# bionic-blue

./: .gitignore  MANIFEST.in  README.md  setup.cfg
_admin_stuff/original_sounds/: blue_shooter_man_jump.url  blue_shooter_man_materialization.url  default_explosion.url  default_projectile_hit.url  default_projectile_shot.url
bionicblue/: __init__.py  __main__.py  appinfo.py  config.py  constants.py  ensurepygamece.py  exceptions.py  game.py  pygameconstants.py  surfsman.py  textman.py
bionicblue/ani2d/: player.py
bionicblue/ani2d/processing/: __init__.py  constants.py  derived.py  recolor.py
bionicblue/classes2d/: collections.py  single.py
bionicblue/data/animations/blue_shooter_man/: instructions.pyl  shooter_man.pxa
bionicblue/data/animations/death_rings/: death_ring00_expanding.pos  death_ring01_expanding.pos  death_ring04_expanding.pos  death_ring05_expanding.pos  instructions.pyl
bionicblue/data/animations/explosion/: explosions.pxa
bionicblue/data/animations/full_charged_shot/: full_charged_shot.pxa  instructions.pyl
bionicblue/data/animations/grunt_bot/: grunt_bot.pxa  instructions.pyl
bionicblue/data/animations/middle_charged_shot/: instructions.pyl  middle_charged_shot.pxa
bionicblue/data/levels/: intro.lvl
bionicblue/data/particles/: charging_particles_pos_map.pyl
bionicblue/ourstdlibs/: tree.py
bionicblue/ourstdlibs/color/: constants.py
bionicblue/ourstdlibs/wdeque/: main.py
bionicblue/pygamesetup/: __init__.py  constants.py  gamepaddirect.py
bionicblue/pygamesetup/services/: normal.py  play.py  record.py
bionicblue/states/: __init__.py  controlsscreen.py  logoscreen.py  mainmenu.py  resourceloader.py  titlescreen.py
bionicblue/states/levelmanager/: __init__.py  prototypemessage.py
bionicblue/states/levelmanager/actors/: gruntbot.py
bionicblue/states/levelmanager/backprops/: citywall.py
bionicblue/states/levelmanager/blocks/: cityblock.py
bionicblue/states/levelmanager/frontprops/: defaultexplosion.py
bionicblue/states/levelmanager/middleprops/: ladder.py
bionicblue/states/levelmanager/player/: __init__.py  chargingparticles.py  dead.py  decelerateleft.py  decelerateright.py  healthcolumn.py  hurt.py  idleleft.py  idleright.py  teleportingin.py  walkleft.py  walkright.py
bionicblue/userprefsman/: main.py  validation.py
blueshooterman/: __init__.py  config.py  palette.py  pygameconstants.py  surfsman.py
blueshooterman/ani2d/: player.py  proc.py
blueshooterman/ani2d/processing/: __init__.py  constants.py  derived.py
blueshooterman/classes2d/: collections.py  surfaceswitcher.py
blueshooterman/data/animations/blue_shooter_man/: instructions.pyl  shooter_man.pxa
blueshooterman/data/animations/death_rings/: death_ring02_expanding.pos  death_ring03_expanding.pos  death_rings.pxa
blueshooterman/data/animations/explosion/: instructions.pyl
blueshooterman/data/animations/grunt_bot/: instructions.pyl
blueshooterman/data/levels/intro/: data.lvl
blueshooterman/ourstdlibs/: behaviour.py  mathutils.py
blueshooterman/ourstdlibs/wdeque/: cvtests.py  wdtests.py
blueshooterman/states/: __init__.py  hqmanager.py  logoscreen.py  resourceloader.py
blueshooterman/states/levelmanager/: __init__.py
blueshooterman/states/levelmanager/player/: hurt.py  (+9 more)
(+7 files in other folders)
