[metadata]
name = bionicblue
version = 0.9.1
author = Kennedy Richard
author_email = kennedy@kennedyrichard.com
description = Action platformer game where a bionic boy protects humanity by fighting robots
keywords = gui, desktop, application, pygame, game, indie
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
url = https://bionicblue.indiepython.com
project_urls =
    Source code = https://github.com/IndiePython/bionic-blue
    Forum = https://github.com/IndiePython/bionic-blue/discussions
    Bug Tracker = https://github.com/IndiePython/bionic-blue/issues
    Donate = https://indiepython.com/donate
classifiers =
    License :: OSI Approved :: The Unlicense (Unlicense)
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: pygame
    Topic :: Desktop Environment
    Topic :: Multimedia
    Intended Audience :: End Users/Desktop
    Natural Language :: English

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    pygame

[options.entry_points]
gui_scripts =
    bionicblue = bionicblue.__main__:run_game
