[metadata]
name = bionicblue
version = 0.10.0
author = Kennedy Richard
author_email = kennedy@kennedyrichard.com
description = A bionic boy fights robots to protect humanity in this action platformer game
keywords = gui, desktop, application, pygame, pygame-ce, game, indie, video game
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
url = https://bionicblue.indiepython.com
project_urls =
    Source code = https://github.com/IndiePython/bionic-blue
    Forum = https://github.com/IndiePython/bionic-blue/discussions
    Bug Tracker = https://github.com/IndiePython/bionic-blue/issues
    Donate = https://indiepython.com/donate
classifiers =
    License :: OSI Approved :: The Unlicense (Unlicense)
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: pygame
    Topic :: Desktop Environment
    Topic :: Multimedia
    Intended Audience :: End Users/Desktop

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    pygame-ce

[options.entry_points]
gui_scripts =
    bionicblue = bionicblue.__main__:run_game
